# graph-neural-nets

./: .gitignore  GNN_NOTES.md  pyproject.toml
node_classification/: main.py
