[project]
name = "graph-neural-nets"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipython>=9.6.0",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
]
